--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 
 html {
 	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 
 body {
@@ -63,7 +64,7 @@ a.nav-link:hover {
 
 
 .btn {
-	margin-top: 30px;
+	margin-top: 10px;
 }
 
 
@@ -131,10 +132,16 @@ a.nav-link:hover {
 
 .form-group {
 	margin-top: 20px;
+	color: white;
 }
 
 
 #background-form {
 	background-color: #4f518c !important;
+}
+
+
+#send {
+	margin-bottom: 25px;
 }
 
